--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/autosharing"]
 
+[tool.hatch.envs.default]
+python = "3.11"
+
 [project]
 name="autosharing_heuristics"
+requires-python = ">=3.11"
 version="0.1"
 dependencies = [
   "numpy",
